[package]
name = "dark-cli"
version = "0.5.3"
authors = ["Ian Smith <ismith@darklang.com>", "Julian Ceipek <julian@darklang.com>"]

[dependencies]
clap = "2.31.2"
walkdir = "2"
reqwest = "0.9.11"
base64 = "0.10.1"
hyper = "0.14.3"
regex = "1"
humansize = "1.1.0"
failure = "0.1.5"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "*"
openssl-sys = { version = "*", optional = true }
netrc = "0.4.1"
http = "0.1.18"
dirs = "2.0.2"
# for Windows directory conversion
path-slash = "0.x"

[target.x86_64-unknown-linux-gnu]
[target.x86_64-unknown-linux-musl]
[target.x86_64-apple-darwin]
[target.i686-pc-windows-gnu]

# required for musl
[features]
  vendored = ["openssl-sys/vendored"]
